small addition in the eq. for alpha

--- a/inst/exercises/isotopeExchange/O18exchangeH2O/O18exchangeH2O_Q.Rmd
+++ b/inst/exercises/isotopeExchange/O18exchangeH2O/O18exchangeH2O_Q.Rmd
@@ -117,7 +117,8 @@ Additionally, we define the relative difference in the isotopic composition of w
 \end{equation}
 By combining these definitions with Eq. \ref{eq2}, the relationship in Eq. \ref{eq8} can be written in the following simple form:
 \begin{equation} \label{eq11}
-\delta^*_{liq}(vap) = \frac{1-\alpha_{liq}(vap)}{\alpha_{liq}(vap)} \quad \mathrm{or} \quad \alpha_{liq}(vap)=\frac{1}{1+\delta^*_{liq}(vap)}.
+\delta^*_{liq}(vap) = \frac{1-\alpha_{liq}(vap)}{\alpha_{liq}(vap)} \quad \mathrm{or} \quad \alpha_{liq}(vap)=\frac{1}{1+\delta^*_{liq}(vap)} = 
+\frac{R^*_{liq}}{R^*_{vap}}.
 \end{equation}
 
 Equation \ref{eq11} shows that there is an *intimate relationship* between the kinetic and equilibrium isotope fractionation effects. On the one hand, $\alpha_{liq}(vap)$ is a measure of the differences between the *rate constants* of the forward and backward reactions (evaporation and precipitation) for the lighter and heavier water molecules (Eq. \ref{eq9}). On the other hand, $\delta^*_{liq}(vap)$ measures the difference between the *isotopic composition* (the ${}^{18}O/{}^{16}O$ isotope ratio) of the water vapor and liquid water in a thermodynamic equilibrium (Eq. \ref{eq10}). Thus, equation \ref{eq11} provides an important insight that forms a basis of applications of stable oxygen isotopes to the hydrological cycle on Earth: if the rate constants of the forward and backward reactions differ between the $H_2{}^{16}O$ and $H_2{}^{18}O$ molecules such that the factor $\alpha_{liq}(vap)$, calculated according to Eq. \ref{eq9}, *differs from 1*, the isotopic composition of the water vapor will *differ* from the isotopic composition of the liquid water. In a thermodynamic equilibrium, this difference will be equal to $\delta^*_{liq}(vap)$ calculated from $\alpha_{liq}(vap)$ according to Eq. \ref{eq11}. In practice, this conclusion is applied in reverse: first, $\delta^*_{liq}(vap)$ is determined experimentally, and then the kinetic fractionation factor $\alpha_{liq}(vap)$ is calculated from the second formula in Eq. \ref{eq11} (see next).
